--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "ee9cb320-3c8d-4a79-9edd-6773e84e6ee5"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
